--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www"
+    "start": "nodemon --exec babel-node ./bin/www",
+    "scss": "node-sass --watch ./public/stylesheets -o ./public/stylesheets"
   },
   "dependencies": {
     "bcrypt": "^2.0.1",
@@ -28,6 +29,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "gulp": "^3.9.1",
+    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-rename": "^1.2.3",
     "nodemon": "^1.17.4"
   }
 }
